Mobile and Desktop regulamento: Updating premiações

--- a/regulamento.html
+++ b/regulamento.html
@@ -278,15 +278,6 @@
                         <li>1º colocado: Troféu e Medalha (Tênis de Mesa);</li>
                         <li>2º colocado: Medalha de Prata (Tênis de Mesa);</li>
                         <li>3º colocado: Duas Medalhas de Bronze (Tênis de Mesa);</li>
-                        <li>
-                            30 % do valor das inscrições da modalidade de Tênis de Mesa serão revertidas para a
-                            premiação
-                            em dinheiro para o primeiro e segundo colocado por categoria, sendo que, 70% do valor
-                            arrecado
-                            irá para o 1º colocado e 30% para o 2º colocado. O pagamento será efetuado via pix, da
-                            divisão A
-                            até a F.
-                        </li>
                     </ul>
 
                     <ul class="list-disc list-inside">
@@ -338,13 +329,20 @@
                         <li>Acima dos 50 anos.</li>
                     </ul>
 
-                    <h4 class="uppercase bg-green-900 px-2 rounded">Masculino e Feminino:</h4>
+                    <h4 class="uppercase bg-green-900 px-2 rounded">No masculino:</h4>
                     <h5>Inscritos ou inscritas nas divisões de federados ou não (Tênis de Mesa)</h5>
                     <ul class="list-disc list-inside pb-4">
-                        <li>1ª Divisão (RATING A e B);</li>
-                        <li>2ª Divisão (RATING C e D);</li>
-                        <li>3ª Divisão (RATING E e F);</li>
-                        <li>4ª Divisão (RATING G).</li>
+                        <li>1ª Divisão (RATING A);</li>
+                        <li>2ª Divisão (RATING B e C);</li>
+                        <li>3ª Divisão (RATING D e E);</li>
+                        <li>4ª Divisão (RATING F e G).</li>
+                    </ul>
+
+                    <h4 class="uppercase bg-green-900 px-2 rounded">No feminino:</h4>
+                    <h5>Inscritos ou inscritas nas divisões de federados ou não (Tênis de Mesa)</h5>
+                    <ul class="list-disc list-inside pb-4">
+                        <li>1ª Divisão (RATING A);</li>
+                        <li>2ª Divisão (RATING B).</li>
                     </ul>
 
                     <p>O circuito terá seu próprio programa de pontuação e o seu ranking, onde o atleta poderá subir de categoria durante o circuito.</p>
@@ -353,12 +351,11 @@
 
             <section id="ranking">
                 <div class="flex flex-col items-center">
-                    <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded text-center">Ranking e forma de
-                        pontuação em cada
-                        modalidade e suas categorias:</h3>
+                    <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded text-center">Ranking e forma de pontuação:</h3>
+                    <p>Para cada divisão teremos um valor de pontuação por etapa:</p>
 
                     <article class="flex flex-col items-center pb-6">
-                        <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de PING PONG</h4>
+                        <h4 class="bg-green-900 px-2 rounded">Ranking para Competidores das categorias de PING PONG</h4>
                         <ul class="list-disc list-inside pb-4">
                             <li>1º lugar: 25 pontos;</li>
                             <li>2º lugar: 18 pontos;</li>
