Mobile and Desktop regulamentos: Updating regulamentos

--- a/regulamento.html
+++ b/regulamento.html
@@ -249,7 +249,8 @@
                         <li>17 a 19 de outubro de 2023.</li>
                     </ul>
 
-                    <p class="text-justify"><span>TOP 16: </span>(os 16 melhores, masculino e feminino do circuito) 08 a 10 de dezembro de 2023.</p>
+                    <p class="text-justify"><span>TOP 16: </span>(os 16 melhores, masculino e feminino do circuito) 08 a
+                        10 de dezembro de 2023.</p>
                 </article>
 
                 <article class="flex flex-col items-center pb-6">
@@ -345,17 +346,19 @@
                         <li>2ª Divisão (RATING B).</li>
                     </ul>
 
-                    <p>O circuito terá seu próprio programa de pontuação e o seu ranking, onde o atleta poderá subir de categoria durante o circuito.</p>
+                    <p>O circuito terá seu próprio programa de pontuação e o seu ranking, onde o atleta poderá subir de
+                        categoria durante o circuito.</p>
                 </article>
             </section>
 
             <section id="ranking">
                 <div class="flex flex-col items-center">
-                    <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded text-center">Ranking e forma de pontuação:</h3>
-                    <p>Para cada divisão teremos um valor de pontuação por etapa:</p>
+                    <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded text-center">Ranking e forma de
+                        pontuação:</h3>
+                    <p class="bg-green-900 px-2 mb-2 rounded text-center">Para cada divisão teremos um valor de pontuação por etapa:</p>
 
                     <article class="flex flex-col items-center pb-6">
-                        <h4 class="bg-green-900 px-2 rounded">Ranking para Competidores das categorias de PING PONG</h4>
+                        <h4 class="bg-green-900 px-2 rounded text-center">Ranking para Competidores das categorias de PING PONG</h4>
                         <ul class="list-disc list-inside pb-4">
                             <li>1º lugar: 25 pontos;</li>
                             <li>2º lugar: 18 pontos;</li>
@@ -365,39 +368,63 @@
                     </article>
 
                     <article class="flex flex-col items-center pb-6">
-                        <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de TÊNIS DE MESA</h4>
-                        <h5>1ª Divisão</h5>
-                        <ul class="list-disc list-inside pb-4">
-                            <li>1º lugar: 150 pontos;</li>
-                            <li>2º lugar: 108 pontos;</li>
-                            <li>Dois 3º lugares: 90 pontos;</li>
-                            <li>5º ao 8º lugar: 72 pontos.</li>
-                        </ul>
+                        <h4 class="bg-green-900 px-2 rounded mb-2">Competidores das categorias de TÊNIS DE MESA</h4>
+                        <section class="flex flex-col items-center pb-6">
+                            <h5 class="bg-green-900 px-2 rounded uppercase">Masculino:</h5>
+                            <h5>1ª Divisão</h5>
+                            <ul class="list-disc list-inside pb-4">
+                                <li>1º lugar: 150 pontos;</li>
+                                <li>2º lugar: 108 pontos;</li>
+                                <li>Dois 3º lugares: 90 pontos;</li>
+                                <li>5º ao 8º lugar: 72 pontos.</li>
+                            </ul>
 
-                        <h4>2ª Divisão</h4>
-                        <ul class="list-disc list-inside pb-4">
-                            <li>1º lugar: 125 pontos;</li>
-                            <li>2º lugar: 90 pontos;</li>
-                            <li>Dois 3º lugares: 75 pontos;</li>
-                            <li>5º ao 8º lugar: 60 pontos.</li>
-                        </ul>
+                            <h4>2ª Divisão</h4>
+                            <ul class="list-disc list-inside pb-4">
+                                <li>1º lugar: 125 pontos;</li>
+                                <li>2º lugar: 90 pontos;</li>
+                                <li>Dois 3º lugares: 75 pontos;</li>
+                                <li>5º ao 8º lugar: 60 pontos.</li>
+                            </ul>
 
-                        <h4>3ª Divisão</h4>
-                        <ul class="list-disc list-inside pb-4">
-                            <li>1º lugar: 100 pontos;</li>
-                            <li>2º lugar: 72 pontos;</li>
-                            <li>Dois 3º lugares: 60 pontos;</li>
-                            <li>5º ao 8º lugar: 48 pontos.</li>
-                        </ul>
+                            <h4>3ª Divisão</h4>
+                            <ul class="list-disc list-inside pb-4">
+                                <li>1º lugar: 100 pontos;</li>
+                                <li>2º lugar: 72 pontos;</li>
+                                <li>Dois 3º lugares: 60 pontos;</li>
+                                <li>5º ao 8º lugar: 48 pontos.</li>
+                            </ul>
 
-                        <h4>4ª Divisão</h4>
-                        <ul class="list-disc list-inside pb-4">
-                            <li>1º lugar: 75 pontos;</li>
-                            <li>2º lugar: 54 pontos;</li>
-                            <li>Dois 3º lugares: 45 pontos;</li>
-                            <li>5º ao 8º lugar: 36 pontos.</li>
-                        </ul>
+                            <h4>4ª Divisão</h4>
+                            <ul class="list-disc list-inside pb-4">
+                                <li>1º lugar: 75 pontos;</li>
+                                <li>2º lugar: 54 pontos;</li>
+                                <li>Dois 3º lugares: 45 pontos;</li>
+                                <li>5º ao 8º lugar: 36 pontos.</li>
+                            </ul>
+                        </section>
+
+                        <section class="flex flex-col items-center pb-6">
+                            <h5 class="bg-green-900 px-2 rounded uppercase">Feminino:</h5>
+                            <h5>1ª Divisão</h5>
+                            <ul class="list-disc list-inside pb-4">
+                                <li>1º lugar: 150 pontos;</li>
+                                <li>2º lugar: 108 pontos;</li>
+                                <li>Dois 3º lugares: 90 pontos;</li>
+                                <li>5º ao 8º lugar: 72 pontos.</li>
+                            </ul>
+
+                            <h4>2ª Divisão</h4>
+                            <ul class="list-disc list-inside pb-4">
+                                <li>1º lugar: 125 pontos;</li>
+                                <li>2º lugar: 90 pontos;</li>
+                                <li>Dois 3º lugares: 75 pontos;</li>
+                                <li>5º ao 8º lugar: 60 pontos.</li>
+                            </ul>
+                        </section>
                     </article>
+
+
                 </div>
             </section>
 
