Mobile and Desktop: Refactoring regulamentos padding

--- a/regulamento.html
+++ b/regulamento.html
@@ -415,7 +415,7 @@
                             </ul>
 
                             <h4>2ª Divisão</h4>
-                            <ul class="list-disc list-inside pb-4">
+                            <ul class="list-disc list-inside">
                                 <li>1º lugar: 125 pontos;</li>
                                 <li>2º lugar: 90 pontos;</li>
                                 <li>Dois 3º lugares: 75 pontos;</li>
