--- a/regulamento.html
+++ b/regulamento.html
@@ -21,11 +21,11 @@
     <title>Regulamento</title>
 </head>
 
-<body>
+<body class="bg-bodyBgColor">
     <header class="bg-blue-950 flex items-center justify-between p-2 font-barlow">
         <img src="src/images/circuito-logo.png" class="h-12 lg:h-14 lg:ml-2"
             alt="Logo do circuito Ibra de Tênis de Mesa">
-        <nav class="hidden bg-slate-600 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
+        <nav class="hidden bg-blue-950 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-blue-950 lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li
