Mobile and Desktop: Refactoring regulamentos

--- a/regulamento.html
+++ b/regulamento.html
@@ -208,7 +208,7 @@
                         <li>
                             O W/O será aplicado após 10 minutos do horário marcado dos jogos da primeira fase. Se houver
                             falta em qualquer um dos jogos da primeira fase, o atleta será eliminado da categoria
-                            escrita.
+                            inscrita.
                         </li>
                     </ul>
                 </article>
@@ -441,7 +441,7 @@
                 <article class="flex flex-col items-center pb-6">
                     <h4 class="uppercase bg-green-900 px-2 rounded">Tênis de mesa</h4>
                     <ul class="list-disc list-inside pb-8">
-                        <li>Nas primeiras fases: jogos melhores de 3 sets de 11 pontos cada;</li>
+                        <li>Nas primeiras fases: jogos melhores de 5 sets de 11 pontos cada;</li>
                         <li>Semifinais e finais: melhores de 5 sets de 11 pontos cada.</li>
                     </ul>
                 </article>
