--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <nav
             class="hidden bg-slate-600 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="header__nav--li li__hover"><a href="">Início</a></li>
-                <li class="header__nav--li li__hover"><a href="">Sobre</a></li>
-                <li class="header__nav--li li__hover"><a href="circuito.html">O circuito</a></li>
-                <li class="header__nav--li li__hover"><a href="">Contato</a></li>
+                <li class="header__nav--li index__li--hover"><a href="">Início</a></li>
+                <li class="header__nav--li index__li--hover"><a href="">Sobre</a></li>
+                <li class="header__nav--li index__li--hover"><a href="circuito.html">O circuito</a></li>
+                <li class="header__nav--li index__li--hover"><a href="">Contato</a></li>
             </ul>
         </nav>
 
