Desktop regulamento: Updating li hover

--- a/regulamento.html
+++ b/regulamento.html
@@ -29,17 +29,17 @@
             lg:bg-blue-950 lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="index.html">Início</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="circuito.html">O circuito</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
                         target="_blank">Inscreva-se</a>
                 </li>
