--- a/circuito.html
+++ b/circuito.html
@@ -28,22 +28,22 @@
             lg:bg-blue-950 lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="index.html">Início</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="regulamento.html">Regulamento</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" target="_blank">Inscrições</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white circuito__li--hover">
                     <a href="#">Chaveamento</a>
                 </li>
             </ul>
